--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
-.container{
+[class*="container"]{
     height: 300px;
     width: 600px;
     border: 1px solid grey;
     margin: 20px;
     display: grid;
+}
+
+/*Grids with specific positioning*/
+.container1{ 
     grid-template-columns: [first] 40px [line2] 50px [line3] auto [col4-start] 50px [five] 40px [end];
-  grid-template-rows: [row1-start] 25% [row1-end] 100px [third-line] auto [last-line];
+    grid-template-rows: [row1-start] 25% [row1-end] 100px [third-line] auto [last-line];
 }
 
 .item-a{
@@ -34,4 +38,38 @@
     grid-column-end: 6;
     grid-row-start: 1;
     grid-row-end: 4;
+}
+
+/*Grids WITHOUT specific positioning*/
+.container2{
+    grid-template-columns:repeat(3, 1fr);
+    grid-template-rows: auto;
+
+    padding: 10px;
+
+    column-gap: 15px;
+    row-gap: 10px;
+    /*shorthand*/
+    gap: 15px 10px;
+
+    align-items:stretch;
+    justify-items:center;
+    /*shorthand*/
+    place-items: stretch stretch;
+
+    justify-content: space-between;
+    align-content: space-evenly;
+    /*shorthand*/
+    place-content: stretch stretch;
+}
+
+[class*="box"]{
+    border: 1px solid grey;
+}
+
+.box5{
+    align-self: center;
+    justify-self: center;
+    /*shorthand*/
+    place-self: center center;
 }
