--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
     grid-row: row1-start/3;
 }
 .item-b{
-    background-color: rgba(255, 165, 0,0.3);
+    background-color: rgba(97, 71, 24, 0.3);
     /*grid-column-start: 1;
     grid-column-end: span col4-start;
     grid-row-start: 2;
@@ -33,7 +33,7 @@
     grid-row: 2/span 2;
 }
 .item-c{
-    background-color: teal;
+    background-color: rgb(92, 145, 145);
     grid-column-start: 5;
     grid-column-end: 6;
     grid-row-start: 1;
@@ -72,4 +72,38 @@
     justify-self: center;
     /*shorthand*/
     place-self: center center;
+}
+
+/*Grid areas
+It is possible leave areas empty with a . */
+.container3{
+    grid-template-columns:repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+
+    grid-template-areas: 
+    "header header header header"
+    "main-content main-content main-content sidebar"
+    "main-content main-content main-content sidebar"
+    "f f f f"
+    ;
+    gap: 10px;
+}
+
+header{
+    background: pink;
+    grid-area: header;
+}
+main{
+    background: thistle;
+    grid-area: main-content;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+aside{
+    background: turquoise;
+    grid-area: sidebar;
+}
+footer{
+    background: lightseagreen;
+    grid-area: f;
 }
